tests/expectations/compiler/function/self_finalize_fail.out
DCE_ENABLED:
Error [ETYC0372066]: `self.caller` is not a valid operand in an async function call context.
    --> compiler-test:7:30
     |
   7 |         assert_eq(addr, self.caller);
     |                              ^^^^^^

DCE_DISABLED:
Error [ETYC0372066]: `self.caller` is not a valid operand in an async function call context.
    --> compiler-test:7:30
     |
   7 |         assert_eq(addr, self.caller);
     |                              ^^^^^^
